# treeshrew

./: .gitignore  Makefile.am  README.txt  bootstrap.sh  build_deps.sh  configure.ac
src/: Makefile.am  character.cpp  character.hpp  dataio.hpp  echo_treeshrew_info.sh  genetree.cpp  genetree.hpp  reader.cpp  reader.hpp  statespace.cpp  statespace.hpp  tree.hpp  utility.cpp  utility.hpp
test/: Makefile.am
test/data/basic/: d20121031.txt  primates.beast.mcct.medianh.newick.tre  primates.beast.mcct.medianh.tre  pythonidae.postorder.newick  pythonidae.preorder.newick  pythonidae.tree.newick
test/scripts/: run-tests.py
test/src/: benchmark_phylogenetic_tree.cpp  calc_hamming_distance.cpp  phylogenetic_likelihood_calc.cpp  read_dna_sequences.cpp  read_tree.cpp  score_phylogenetic_tree.cpp  score_short_read_likelihood.cpp  testutils.cpp  testutils.hpp  tree_child_iter.cpp  tree_internal_iter.cpp  tree_leaf_iter.cpp  tree_postorder_iter.cpp  tree_preorder_iter.cpp
